--- a/Homework 1/hw1-2/hw1_2_311511052.ipynb
+++ b/Homework 1/hw1-2/hw1_2_311511052.ipynb
@@ -415,7 +415,7 @@
     "        _, predicted = torch.max(outputs.data, 1)\n",
     "        train_acc_sum += (predicted == labels).sum().item()\n",
     "        train_loop.set_description(f'Training, Epoch [{i + 1}/{epoch}]')\n",
-    "        train_loop.set_postfix(loss=train_loss_sum / (j + 1), acc=train_acc_sum / ((j + 1) * 64))\n",
+    "        train_loop.set_postfix(loss=train_loss_sum / ((j + 1) * 64), acc=train_acc_sum / ((j + 1) * 64))\n",
     "\n",
     "    model.eval()\n",
     "    test_loop = tqdm((test_loader), total=len(test_loader))\n",
@@ -429,7 +429,7 @@
     "            _, predicted = torch.max(outputs.data, 1)\n",
     "            test_acc_sum += (predicted == labels).sum().item()\n",
     "            test_loop.set_description(f'Testing, Epoch [{i + 1}/{epoch}]')\n",
-    "            test_loop.set_postfix(loss=test_loss_sum / (j + 1), acc=test_acc_sum / ((j + 1) * 64))\n",
+    "            test_loop.set_postfix(loss=test_loss_sum / ((j + 1) * 64), acc=test_acc_sum / ((j + 1) * 64))\n",
     "\n",
     "    train_loss.append(train_loss_sum / len(train_loader))\n",
     "    train_acc.append(train_acc_sum / len(train_loader.dataset))\n",
@@ -1319,7 +1319,7 @@
     "        _, predicted = torch.max(outputs.data, 1)\n",
     "        train_acc_sum += (predicted == labels).sum().item()\n",
     "        train_loop.set_description(f'Training, Epoch [{i + 1}/{epoch}]')\n",
-    "        train_loop.set_postfix(loss=train_loss_sum / (j + 1), acc=train_acc_sum / ((j + 1) * 64))\n",
+    "        train_loop.set_postfix(loss=train_loss_sum / ((j + 1) * 64), acc=train_acc_sum / ((j + 1) * 64))\n",
     "\n",
     "    resnet18_w.eval()\n",
     "    test_loop = tqdm((test_loader), total=len(test_loader))\n",
@@ -1333,7 +1333,7 @@
     "            _, predicted = torch.max(outputs.data, 1)\n",
     "            test_acc_sum += (predicted == labels).sum().item()\n",
     "            test_loop.set_description(f'Testing, Epoch [{i + 1}/{epoch}]')\n",
-    "            test_loop.set_postfix(loss=test_loss_sum / (j + 1), acc=test_acc_sum / ((j + 1) * 64))\n",
+    "            test_loop.set_postfix(loss=test_loss_sum / ((j + 1) * 64), acc=test_acc_sum / ((j + 1) * 64))\n",
     "\n",
     "    res_train_loss.append(train_loss_sum / len(train_loader))\n",
     "    res_train_acc.append(train_acc_sum / len(train_loader.dataset))\n",
