[UPDATE] Diffusion model

--- a/Homework 2/hw2-1/hw2_1_311511052.ipynb
+++ b/Homework 2/hw2-1/hw2_1_311511052.ipynb
@@ -151,6 +151,16 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<center>\n",
+        "    <img src = \"https://i.imgur.com/S3SeMbQ.png\">\n",
+        "</center>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
@@ -477,6 +487,14 @@
     {
       "attachments": {},
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<a href = \"https://imgur.com/bCcJXc5\">Animation</a>"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
       "metadata": {
         "id": "d1pz3VO-y43o"
       },
@@ -493,8 +511,19 @@
       },
       "source": [
         "<center>\n",
-        "    <img src = \"./image/fake_images_5.png\" width=\"49%\">\n",
-        "    <img src = \"./image/fake_images_100.png\" width=\"49%\">\n",
+        "    <img src = \"https://i.imgur.com/1qpBBG7.png\" width=\"49%\">\n",
+        "    <img src = \"https://i.imgur.com/TsoeEOT.png\" width=\"49%\">\n",
+        "</center>"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<center>\n",
+        "    <img src = \"https://i.imgur.com/D2ZNeP7.png\" width=\"47%\">\n",
+        "    <img src = \"https://i.imgur.com/xsisNNG.png\" width=\"49%\">\n",
         "</center>"
       ]
     },
@@ -515,7 +544,17 @@
       "metadata": {
         "id": "HV49xflDltIS"
       },
-      "source": []
+      "source": [
+        "The \"Helvetica scenario\" refers to a common problem when training generative adversarial networks (GANs) called mode collapse. \n",
+        "\n",
+        "**Mode collapse** is when the generator produces a limited variety of samples that do not represent the full range of possible samples.\n",
+        "\n",
+        "To avoid this problem, we can use the following methods:\n",
+        "\n",
+        "1. Increasing the capacity of the generator or discriminator model.\n",
+        "2. Adjusting the learning rate or optimization algorithm.\n",
+        "3. Using regularization techniques such as weight decay or dropout to prevent overfitting."
+      ]
     },
     {
       "attachments": {},
@@ -650,6 +689,16 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<center>\n",
+        "    <img src = \"https://i.imgur.com/lZ93lRB.png\">\n",
+        "</center>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -716,13 +765,12 @@
       "outputs": [],
       "source": [
         "# Training start\n",
-        "train_loader = get_loader(\n",
-        "    './data/resized_64x64/',\n",
-        "    batch_size=batch_size, \n",
-        "    num_workers=num_workers,\n",
-        ")\n",
-        "model = model.to(device)\n",
-        "train(model, train_loader)"
+        "# train_loader = get_loader(\n",
+        "#     './data/resized_64x64/',\n",
+        "#     batch_size=batch_size, \n",
+        "#     num_workers=num_workers,\n",
+        "# )\n",
+        "#train(model, train_loader)"
       ]
     },
     {
@@ -759,7 +807,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -767,7 +815,25 @@
         "id": "kJzQj21gld26",
         "outputId": "2294066d-1a65-4e15-80e0-bd682f0ac063"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "cuda\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "<All keys matched successfully>"
+            ]
+          },
+          "execution_count": 1,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "import torch, os\n",
         "from tqdm import trange, tqdm\n",
@@ -782,22 +848,7 @@
         "T1 = 500   # 500 or 1000\n",
         "model1 = Unet(in_channels=3).to(device)\n",
         "state_dict1 = torch.load('checkpoint_100epoch_T500.pth')\n",
-        "model1.load_state_dict(state_dict1['model_state_dict'])\n",
-        "\n",
-        "T2 = 1000   # 500 or 1000\n",
-        "model2 = Unet(in_channels=3).to(device)\n",
-        "state_dict2 = torch.load('checkpoint_100epoch_T1000.pth')\n",
-        "model2.load_state_dict(state_dict2['model_state_dict'])"
-      ]
-    },
-    {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "<center>\n",
-        "    <img src = \"./image/DDPM.png\">\n",
-        "</center>"
+        "model1.load_state_dict(state_dict1['model_state_dict'])"
       ]
     },
     {
@@ -808,40 +859,45 @@
       },
       "outputs": [],
       "source": [
-        "ALPHA = (1-torch.linspace(1e-4, 2e-2, T)).reshape((-1, 1)).to(device)\n",
+        "ALPHA = (1-torch.linspace(1e-4, 2e-2, T1)).reshape((-1, 1)).to(device)\n",
         "\n",
         "@torch.no_grad()\n",
         "def generate_and_save(model, gen_N, chan=3, resolu=(28, 28)):\n",
         "    model.eval()\n",
+        "    \n",
         "    L = []\n",
-        "    # Sample gaussian noise X_T (5%) and denoise it\n",
-        "    X_T = torch.randn(gen_N, chan, *resolu, device=device)\n",
-        "    L.append(X_T)\n",
         "\n",
-        "    for t in (bar := trange(T-1, -1, -1)):\n",
+        "    # sample from prior\n",
+        "\n",
+        "    X_T = torch.normal(0, 1, (gen_N, chan, *resolu), device=device)\n",
+        "\n",
+        "    for t in (bar := trange(T1-1, -1, -1)):\n",
+        "\n",
+        "        # let t to be tensor\n",
         "\n",
         "        bar.set_description(f'[Denoising] step: {t}')\n",
-        "        # Sampling\n",
-        "        eps = torch.randn(gen_N, chan, *resolu, device=device)\n",
-        "        # Denoising\n",
-        "        X_T = ALPHA[t]*X_T + (1-ALPHA[t])*model(X_T, t+1) + torch.sqrt(1-ALPHA[t]**2)*eps\n",
+        "\n",
+        "        if t > 1:\n",
+        "            z = torch.normal(0, 1, (gen_N, chan, *resolu), device=device)\n",
+        "        else:\n",
+        "            z = torch.zeros(gen_N, chan, *resolu, device=device)\n",
+        "\n",
+        "        # get x_{t-1} from x_t\n",
+        "\n",
+        "        alpha_bar = torch.prod(ALPHA[:t+1]).reshape((-1, 1, 1, 1))\n",
+        "\n",
+        "        beta = 1 - ALPHA[t]\n",
+        "\n",
+        "        sigma = torch.sqrt(beta).reshape(-1, 1, 1, 1)\n",
+        "\n",
+        "        prediction = model(X_T, torch.Tensor([t+1]).repeat(gen_N).to(device))\n",
+        "\n",
+        "        X_T = 1 / torch.sqrt(ALPHA[t]) * (X_T - (1 - ALPHA[t]) / torch.sqrt(1 - alpha_bar) * prediction) + sigma * z\n",
         "\n",
         "        if t < 1:\n",
         "            L.append(X_T)\n",
-        "            break\n",
         "    \n",
-        "    save_image(torch.cat(L)/2+0.5, 'L.jpg')"
-      ]
-    },
-    {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "PPBzb-GFyeK4"
-      },
-      "source": [
-        "### 1.2.a \n",
-        "#### **Draw** some generated samples based on diffusion steps $T = 500$ and $T = 1000$. We provide the **pre-trained weights** which are trained with 500 and 1000 steps. Hint: In the paper, the steps start at 1.."
+        "    save_image(torch.cat(L)/2+0.5, 'Diffusion_500.jpg')"
       ]
     },
     {
@@ -864,9 +920,87 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "<All keys matched successfully>"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "T2 = 1000   # 500 or 1000\n",
+        "model2 = Unet(in_channels=3).to(device)\n",
+        "state_dict2 = torch.load('checkpoint_100epoch_T1000.pth')\n",
+        "model2.load_state_dict(state_dict2['model_state_dict'])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
+      "source": [
+        "ALPHA = (1-torch.linspace(1e-4, 2e-2, T2)).reshape((-1, 1)).to(device)\n",
+        "\n",
+        "@torch.no_grad()\n",
+        "def generate_and_save(model, gen_N, chan=3, resolu=(28, 28)):\n",
+        "    model.eval()\n",
+        "    \n",
+        "    L = []\n",
+        "\n",
+        "    # sample from prior\n",
+        "\n",
+        "    X_T = torch.normal(0, 1, (gen_N, chan, *resolu), device=device)\n",
+        "\n",
+        "    for t in (bar := trange(T2-1, -1, -1)):\n",
+        "\n",
+        "        # let t to be tensor\n",
+        "\n",
+        "        bar.set_description(f'[Denoising] step: {t}')\n",
+        "\n",
+        "        if t > 1:\n",
+        "            z = torch.normal(0, 1, (gen_N, chan, *resolu), device=device)\n",
+        "        else:\n",
+        "            z = torch.zeros(gen_N, chan, *resolu, device=device)\n",
+        "\n",
+        "        # get x_{t-1} from x_t\n",
+        "\n",
+        "        alpha_bar = torch.prod(ALPHA[:t+1]).reshape((-1, 1, 1, 1))\n",
+        "\n",
+        "        beta = 1 - ALPHA[t]\n",
+        "\n",
+        "        sigma = torch.sqrt(beta).reshape(-1, 1, 1, 1)\n",
+        "\n",
+        "        prediction = model(X_T, torch.Tensor([t+1]).repeat(gen_N).to(device))\n",
+        "\n",
+        "        X_T = 1 / torch.sqrt(ALPHA[t]) * (X_T - (1 - ALPHA[t]) / torch.sqrt(1 - alpha_bar) * prediction) + sigma * z\n",
+        "\n",
+        "        if t < 1:\n",
+        "            L.append(X_T)\n",
+        "    \n",
+        "    save_image(torch.cat(L)/2+0.5, 'Diffusion_1000.jpg')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "[Denoising] step: 0: 100%|██████████| 1000/1000 [05:04<00:00,  3.28it/s] \n"
+          ]
+        }
+      ],
       "source": [
         "generate_and_save(model2, gen_N=64, resolu=(64, 64))"
       ]
@@ -875,9 +1009,26 @@
       "attachments": {},
       "cell_type": "markdown",
       "metadata": {
+        "id": "PPBzb-GFyeK4"
+      },
+      "source": [
+        "### 1.2.a \n",
+        "#### **Draw** some generated samples based on diffusion steps $T = 500$ and $T = 1000$. We provide the **pre-trained weights** which are trained with 500 and 1000 steps. Hint: In the paper, the steps start at 1.."
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {
         "id": "XXPkkcliyq_1"
       },
-      "source": []
+      "source": [
+        "<center>\n",
+        "    <img src = \"https://i.imgur.com/Qw7O5D9.jpg\" width=\"49%\">\n",
+        "    <img src = \"https://i.imgur.com/XcgyfVu.jpg\" width=\"49%\">\n",
+        "    <p>500 / 1000 steps</p>\n",
+        "</center>"
+      ]
     },
     {
       "attachments": {},
@@ -896,7 +1047,15 @@
       "metadata": {
         "id": "imJ8XghXyyJ4"
       },
-      "source": []
+      "source": [
+        "In the Diffusion Model, the diffusion steps $T$ is the number of steps to transform the noise back into a sample from the target distribution. \n",
+        "\n",
+        "The more steps we have, the more accurate the result will be. \n",
+        "\n",
+        "However, the more steps we have, the more time and computational resources we need.\n",
+        "\n",
+        "Therefore, we need to find a balance between the accuracy and the training time."
+      ]
     },
     {
       "attachments": {},
@@ -930,7 +1089,45 @@
       "metadata": {
         "id": "68qSH0keyO60"
       },
-      "source": []
+      "source": [
+        "<center>\n",
+        "    <table>\n",
+        "        <tr>\n",
+        "            <th>\n",
+        "                <center>\\</center>\n",
+        "            </th>\n",
+        "            <th>\n",
+        "                <center>GAN</center>\n",
+        "            </th>\n",
+        "            <th>\n",
+        "                <center>DDPM</center>\n",
+        "            </th>\n",
+        "        </tr>\n",
+        "        <tr>\n",
+        "            <td>\n",
+        "                <center>pros</center>\n",
+        "            </td>\n",
+        "            <td>\n",
+        "                Lots of research and applications\n",
+        "            </td>\n",
+        "            <td>\n",
+        "                Higer quality image generation\n",
+        "            </td>\n",
+        "        </tr>\n",
+        "        <tr>\n",
+        "            <td>\n",
+        "                <center>cons</center>\n",
+        "            </td>\n",
+        "            <td>\n",
+        "                Unstable training process and less diversity\n",
+        "            </td>\n",
+        "            <td>\n",
+        "                Slow synthesis speed\n",
+        "            </td>\n",
+        "        </tr>\n",
+        "    </table>\n",
+        "</center>"
+      ]
     }
   ],
   "metadata": {
