--- a/Homework 2/hw2-2/bonus.ipynb
+++ b/Homework 2/hw2-2/bonus.ipynb
@@ -27,12 +27,21 @@
     "train_data      = []\n",
     "# [TODO] \n",
     "# Load training data\n",
+    "for i in range(len(train_tsvreader)):\n",
+    "    train_data.append(InputExample(guid=i,\n",
+    "                                   text_a=train_tsvreader['sentence'][i],\n",
+    "                                   text_b=None,\n",
+    "                                   label=train_tsvreader['label'][i]))\n",
     "\n",
-    "\n",
-    "valid_tsvreader = pandas.read_csv(\"dev.tsv\",sep='\\t')\n",
+    "valid_tsvreader = pandas.read_csv(\"test.tsv\",sep='\\t')\n",
     "test_data       = []\n",
     "# [TODO] \n",
-    "# Load testing data"
+    "# Load testing data\n",
+    "for i in range(len(valid_tsvreader)):\n",
+    "    test_data.append(InputExample(guid=i,\n",
+    "                                   text_a=valid_tsvreader['sentence'][i],\n",
+    "                                   text_b=None,\n",
+    "                                   label=valid_tsvreader['label'][i]))"
    ]
   },
   {
@@ -51,8 +60,8 @@
    "source": [
     "plm, tokenizer, model_config, WrapperClass = load_plm('bert', 'bert-base-uncased')\n",
     "\n",
-    "template    = ''  # [TODO] Define a template\n",
-    "soft_tokens =     # [TODO] number of soft tokens\n",
+    "template    = '{\"placeholder\":\"text_a\"} It was {\"mask\"}'\n",
+    "soft_tokens = 8\n",
     "mytemplate  = SoftTemplate(model=plm, text=template, tokenizer=tokenizer,\n",
     "                    num_tokens=soft_tokens, initialize_from_vocab=True)\n",
     "\n",
@@ -69,7 +78,12 @@
     "    tokenizer = tokenizer,\n",
     ")\n",
     "\n",
-    "prompt_model =      #[TODO] Combine Template and Verbalizer into a PromptModel\n"
+    "prompt_model = PromptForClassification(\n",
+    "    plm=plm,\n",
+    "    template=mytemplate,\n",
+    "    verbalizer=promptVerbalizer,\n",
+    "    freeze_plm=False\n",
+    ")\n"
    ]
   },
   {
@@ -88,10 +102,31 @@
    "source": [
     "\n",
     "train_dataloader = PromptDataLoader(\n",
-    "    #[TODO] \n",
+    "    dataset=train_data, \n",
+    "    template=template, \n",
+    "    tokenizer=tokenizer,\n",
+    "    tokenizer_wrapper_class=WrapperClass, \n",
+    "    max_seq_length=256, \n",
+    "    decoder_max_length=3,\n",
+    "    batch_size=4,\n",
+    "    shuffle=True, \n",
+    "    teacher_forcing=False, \n",
+    "    predict_eos_token=False,\n",
+    "    truncate_method=\"head\"\n",
     ")\n",
-    "valid_dataloader = PromptDataLoader(\n",
-    "    #[TODO] \n",
+    "\n",
+    "validation_dataloader = PromptDataLoader(\n",
+    "    dataset=test_data, \n",
+    "    template=template, \n",
+    "    tokenizer=tokenizer,\n",
+    "    tokenizer_wrapper_class=WrapperClass, \n",
+    "    max_seq_length=256, \n",
+    "    decoder_max_length=3,\n",
+    "    batch_size=4,\n",
+    "    shuffle=False, \n",
+    "    teacher_forcing=False, \n",
+    "    predict_eos_token=False,\n",
+    "    truncate_method=\"head\"\n",
     ")\n"
    ]
   },
@@ -105,21 +140,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from transformers import (\n",
     "    AdamW,\n",
+    "    get_linear_schedule_with_warmup\n",
     ")\n",
     "\n",
-    "optimizer_grouped_parameters = # [TODO] freeze parameter of encoder, only update soft tokens \n",
+    "optimizer_grouped_parameters = [p for n, p in prompt_model.named_parameters() if p.requires_grad]\n",
     "\n",
     "# Using different optimizer for prompt parameters and model parameters\n",
-    "optimizer = AdamW(optimizer_grouped_parameters, lr= # [TODO])\n",
+    "optimizer = AdamW(optimizer_grouped_parameters, lr= 5e-5, eps=1e-8)\n",
     "\n",
-    "for epoch in range(# [TODO] number of epochs):\n",
-    "    # [TODO]"
+    "total_epochs = 5\n",
+    "\n",
+    "scheduler = get_linear_schedule_with_warmup(optimizer, num_warmup_steps=200, num_training_steps=len(train_dataloader)*total_epochs)\n",
+    "\n",
+    "for epoch in range(total_epochs):\n",
+    "    prompt_model.train()\n",
+    "    for step, batch in enumerate(train_dataloader):\n",
+    "        loss, logits = prompt_model(**batch)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        scheduler.step()\n",
+    "        optimizer.zero_grad()\n",
+    "        if step % 50 == 0:\n",
+    "            print(f\"Epoch {epoch} | Step {step} | Loss {loss}\")\n",
+    "\n",
+    "    prompt_model.eval()\n",
+    "    for step, batch in enumerate(validation_dataloader):\n",
+    "        loss, logits = prompt_model(**batch)\n",
+    "        if step % 50 == 0:\n",
+    "            print(f\"Epoch {epoch} | Step {step} | Loss {loss}\")"
    ]
   }
  ],
