--- a/Homework 2/hw2-2/hw2_2_311511052.ipynb
+++ b/Homework 2/hw2-2/hw2_2_311511052.ipynb
@@ -50,12 +50,11 @@
     "from torch.nn import TransformerEncoder, TransformerEncoderLayer\n",
     "import warnings\n",
     "from torchtext.data.utils import get_tokenizer\n",
-    "from torchtext.vocab import GloVe\n",
+    "from torchtext.vocab import GloVe,vocab\n",
     "from torch.utils.data import DataLoader\n",
     "import tqdm\n",
     "from nltk.tokenize.treebank import TreebankWordDetokenizer\n",
     "import nltk\n",
-    "import csv\n",
     "from nltk.corpus import stopwords\n",
     "from torch.nn.utils.rnn import pad_sequence\n",
     "import numpy as np\n",
@@ -142,7 +141,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_pipeline = lambda x: text_vec.get_vecs_by_tokens(tokenizer(x), lower_case_backup=False)\n",
+    "# text_pipeline = lambda x: text_vec.get_vecs_by_tokens(tokenizer(x), lower_case_backup=False)\n",
+    "myvocab=vocab(text_vec.stoi, min_freq=0, specials=['<pad>','<unk>'], special_first = True) \n",
+    "\n",
+    "myvocab.set_default_index(myvocab['<unk>'])\n",
     "\n",
     "label_pipeline = lambda x: int(x) - 1\n",
     "\n",
@@ -152,7 +154,8 @@
     "    label_list, text_list = [], []\n",
     "    for (_label, _text) in batch:\n",
     "         label_list.append(label_pipeline(_label))\n",
-    "         processed_text = torch.tensor(text_pipeline(_text), dtype=torch.int64)\n",
+    "         \n",
+    "         processed_text = torch.tensor(myvocab(tokenizer(_text)), dtype=torch.int64)\n",
     "         text_list.append(processed_text)\n",
     "    text_list = torch.nn.utils.rnn.pad_sequence(text_list, padding_value=0)\n",
     "    label_list = torch.tensor(label_list, dtype=torch.int64)\n",
@@ -161,7 +164,7 @@
     "def test_collate_batch(batch):\n",
     "    text_list = []\n",
     "    for (_text) in batch:\n",
-    "         processed_text = torch.tensor(text_pipeline(_text), dtype=torch.int64)\n",
+    "         processed_text = torch.tensor(myvocab(tokenizer(_text)), dtype=torch.int64)\n",
     "         text_list.append(processed_text)\n",
     "    text_list = torch.nn.utils.rnn.pad_sequence(text_list, padding_value=0)\n",
     "    return text_list.to(device)\n",
@@ -171,19 +174,13 @@
     "    def __init__(self, num_class: int, d_model: int, nhead: int, d_hid: int,\n",
     "                 nlayers: int, dropout: float = 0.5, activatioln: str = 'relu') -> None:\n",
     "        super().__init__()\n",
+    "        pretrain_emb=torch.cat([torch.zeros((2,100)),text_vec.vectors])\n",
     "        self.model_type = 'Transformer'\n",
     "        self.pos_encoder = PositionalEncoding(d_model, dropout)\n",
     "        encoder_layers = TransformerEncoderLayer(d_model, nhead, d_hid, dropout,)\n",
     "        self.transformer_encoder = TransformerEncoder(encoder_layers, nlayers)\n",
-    "        self.encoder = nn.Embedding.from_pretrained(text_vec.vectors, freeze=False)\n",
+    "        self.encoder = nn.Embedding.from_pretrained(pretrain_emb, freeze=False)\n",
     "        self.decoder = nn.Linear(d_model, num_class)\n",
-    "        self.init_weights()\n",
-    "\n",
-    "    def init_weights(self) -> None:\n",
-    "        initrange = 0.1\n",
-    "        self.encoder.weight.data.uniform_(-initrange, initrange)\n",
-    "        self.decoder.bias.data.zero_()\n",
-    "        self.decoder.weight.data.uniform_(-initrange, initrange)\n",
     "\n",
     "    def forward(self, src: Tensor) -> Tensor:\n",
     "        \"\"\"\n",
@@ -194,15 +191,12 @@
     "        Returns:\n",
     "            output Tensor of shape ``[seq_len, batch_size, ntoken]``\n",
     "        \"\"\"\n",
+    "        src = self.encoder(src)\n",
     "        src = self.pos_encoder(src)\n",
     "        output = self.transformer_encoder(src)\n",
     "        output = torch.mean(output, dim=0)\n",
     "        output = self.decoder(output)\n",
     "        return output\n",
-    "\n",
-    "def generate_square_subsequent_mask(sz: int) -> Tensor:\n",
-    "    \"\"\"Generates an upper-triangular matrix of ``-inf``, with zeros on ``diag``.\"\"\"\n",
-    "    return torch.triu(torch.ones(sz, sz) * float('-inf'), diagonal=1)\n",
     "    \n",
     "class PositionalEncoding(nn.Module):\n",
     "\n",
@@ -250,13 +244,13 @@
     "d_hid = 400  # dimension of the feedforward network model in ``nn.TransformerEncoder``\n",
     "nlayers = 2  # number of ``nn.TransformerEncoderLayer`` in ``nn.TransformerEncoder``\n",
     "nhead = 4  # number of heads in ``nn.MultiheadAttention``\n",
-    "dropout = 0.1  # dropout probability\n",
-    "total_epoch = 10\n",
+    "dropout = 0.25  # dropout probability\n",
+    "total_epoch = 50\n",
     "act_funct = 'silu'\n",
     "\n",
     "model = TransformerModel(num_class, emsize, nhead, d_hid, nlayers, dropout, activatioln=act_funct).to(device)\n",
     "\n",
-    "optimizer = torch.optim.AdamW(model.parameters(), lr=1e-4, weight_decay=1e-4)\n",
+    "optimizer = torch.optim.AdamW(model.parameters(), lr=5e-3, weight_decay=1e-4)\n",
     "criterion = torch.nn.CrossEntropyLoss().to(device)\n",
     "scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, T_max=total_epoch, eta_min=1e-5)"
    ]
@@ -283,8 +277,6 @@
     "        optimizer.step()\n",
     "        train_loss += loss.item()\n",
     "        pred = torch.argmax(F.softmax(output, dim=1) ,dim=1)\n",
-    "        # print(\"train_pred\", pred)\n",
-    "        # print(\"train_label\", label)\n",
     "        train_acc += (pred == label).sum().item()\n",
     "        train_loop.set_description(f\"Epoch [{i+1}/{total_epoch}]\")\n",
     "        train_loop.set_postfix(train_loss=train_loss/(len(train_dataloader) * batch), train_acc=train_acc/(len(train_dataloader) * batch))\n",
@@ -298,8 +290,6 @@
     "            loss = criterion(output, label)\n",
     "            valid_loss += loss.item()\n",
     "            pred = torch.argmax(F.softmax(output, dim=1), dim=1)\n",
-    "            # print(\"valid_pred\", pred)\n",
-    "            # print(\"valid_label\", label)\n",
     "            valid_acc += (pred == label).sum().item()\n",
     "            valid_loop.set_description(f\"Epoch [{i+1}/{total_epoch}]\")\n",
     "            valid_loop.set_postfix(valid_loss=valid_loss/(len(valid_dataloader) * batch), valid_acc=valid_acc/(len(valid_dataloader) * batch))\n",
@@ -353,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.16"
   },
   "orig_nbformat": 4
  },
